# internal/handlers/userHandler.go
@@ -1,12 +1,15 @@
 package handlers
 
 import (
+	"database/sql"
+	"errors"
 	"github.com/go-openapi/runtime/middleware"
 	"github.com/go-openapi/swag"
 	"github.com/lib/pq"
 	"github.com/razvan-bara/VUGO-API/api/sdto"
 	"github.com/razvan-bara/VUGO-API/api/user_api/suser"
 	"github.com/razvan-bara/VUGO-API/internal/services"
+	"github.com/razvan-bara/VUGO-API/internal/utils"
 	"net/http"
 )
 
@@ -35,6 +38,37 @@ func (handler UserHandler) RegisterUser(params suser.RegisterUserParams) middlew
 	}
 
 	return suser.NewRegisterUserOK().WithPayload(user)
+}
+
+func (handler UserHandler) AttemptLogin(params suser.LoginUserParams) middleware.Responder {
+	user, err := handler.userService.AttemptLogin(params.Body)
+
+	if errors.Is(err, sql.ErrNoRows) {
+		return suser.NewLoginUserNotFound().WithPayload(&sdto.Error{
+			Code:    swag.Int64(http.StatusNotFound),
+			Message: swag.String("user with given email not found"),
+		})
+	}
+
+	if err != nil {
+		return suser.NewLoginUserBadRequest().WithPayload(&sdto.Error{
+			Code:    swag.Int64(http.StatusBadRequest),
+			Message: swag.String("given credentials didnt match with what's stored"),
+		})
+	}
+
+	token, err := utils.GenerateJWTToken(user)
+	if err != nil {
+		return suser.NewLoginUserInternalServerError().WithPayload(&sdto.Error{
+			Code:    swag.Int64(http.StatusInternalServerError),
+			Message: swag.String("error while generating jwt"),
+		})
+	}
+
+	return suser.NewLoginUserOK().WithPayload(&sdto.LoginResponse{
+		AccessToken: token,
+		User:        user,
+	})
 }
 
 func NewUserHandler(userService services.IUserService) *UserHandler {
